Service updates with SharedPermissions and UserTypes
