# src/main/java/com/bytecoders/pharmaid/repository/model/SharedPermission.java
@@ -1,7 +1,11 @@
 package com.bytecoders.pharmaid.repository.model;
 
+import com.bytecoders.pharmaid.openapi.model.SharePermissionType;
+import com.bytecoders.pharmaid.openapi.model.ShareRequestStatus;
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
 import jakarta.persistence.Id;
 import jakarta.persistence.JoinColumn;
 import jakarta.persistence.ManyToOne;
@@ -15,19 +19,24 @@ import org.hibernate.annotations.UuidGenerator;
 @Table(name = "shared_permissions")
 public class SharedPermission {
 
-  @Id @UuidGenerator private String id;
+  @Id
+  @UuidGenerator
+  @Column(name = "share_request_id")
+  private String id;
 
   @ManyToOne
-  @JoinColumn(name = "owner", nullable = false)
+  @JoinColumn(name = "owner_id", nullable = false)
   private User owner;
 
   @ManyToOne
-  @JoinColumn(name = "requester", nullable = false)
+  @JoinColumn(name = "requester_id", nullable = false)
   private User requester;
 
-  @Column(name = "status", nullable = false)
-  private Integer status;
+  @Enumerated(EnumType.STRING)
+  @Column(name = "share_request_status", nullable = false)
+  private ShareRequestStatus status;
 
-  @Column(name = "permission_type", nullable = false)
-  private Integer permissionType;
+  @Enumerated(EnumType.STRING)
+  @Column(name = "share_permission_type", nullable = false)
+  private SharePermissionType sharePermissionType;
 }
